# Explore-Ray

./: .gitignore  Boids.exe.lnk  CMakeLists.txt  Explore-Ray.rdi  README.md  build.bat
gundata/: !catalog.yaml  BombExplo_1EF973EA.gpsm.yaml  BombSet_C0E95E90.gpsm.yaml  BusterLight_523048E0.gpsm.yaml  BusterMuzzle_9B564161.gpsm.yaml  BusterSparks_04E29C5B.gpsm.yaml  BusterSwoosh1_869B8E14.swsh.yaml  BusterSwoosh2_804E26D9.swsh.yaml  CMDL_0C943B01.blend  CMDL_1480E31D.blend  CMDL_35FE11C8.blend  CMDL_44EC766D.blend  CMDL_56A2B4E2.blend  CMDL_77975006.blend  CMDL_79751119.blend  CMDL_9169216E.blend  CMDL_959A8E99.blend  CMDL_9615D7E0.blend  CMDL_98BBA1BB.blend  CMDL_9DFE6747.blend  CMDL_BCCB83A3.blend  CMDL_BFA9B75A.blend  CMDL_C0E8B98D.blend  CMDL_C27804C3.blend  CMDL_D7572195.blend  CMDL_E6772A2D.blend  CMDL_E8523EA7.blend  CMDL_EB18FD67.blend  CRSC_20174221.crsm.yaml  CRSC_39EB7161.crsm.yaml  CRSC_48036137.crsm.yaml  CRSC_5ECC77F2.crsm.yaml  CRSC_7AC6B0B2.crsm.yaml  CRSC_9A30DF26.crsm.yaml  CRSC_9C223FB2.crsm.yaml  CRSC_A8046E53.crsm.yaml  CRSC_B6D2B6A0.crsm.yaml  CRSC_BF09C349.crsm.yaml  CRSC_C2ECA4DF.crsm.yaml  CRSC_D27D6EDD.crsm.yaml  (+356 more)
include/: boids.h  catalog.h  iconswatch.h  iso.h  partfx.h  partviewer.h
isodata/: doc.md
shaders/: fragment.glsl  instance-vertex.glsl
src/: boids.c  catalog.c  iconswatch.c  iso.c  main.c  partfx.c  partviewer.c
